--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
     margin: 0;
 }
 
+html {
+    font-size: 80%;
+}
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
